# duinolabo

./: README.md
.ipynb_checkpoints/: README-checkpoint.md  README_pyduino-checkpoint.md
arduino/capteur_pression/: capteur_pression.ino
arduino/capteur_pression_complet/: capteur_pression_complet.ino
arduino/capteur_temperature/: capteur_temperature.ino
arduino/capteur_us/: capteur_us.ino
arduino/capteur_us_tempo/: capteur_us_tempo.ino
arduino/condo/: condo.ino
docs/: __init__.py  reference_juduino.md  reference_pduino.md  reference_pyduino.md
juduino/: __init__.py  description.md  setup.cfg
juduino/.ipynb_checkpoints/: setup-checkpoint.cfg
juduino/juduino/: __init__.py  juduino.py
juduino/juduino/.ipynb_checkpoints/: juduino-checkpoint.py
juduino/juduino/juduino.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pduino/: __init__.py  description.md  setup.cfg
perso/: README_base.md
pyduino/: __init__.py  description.md  setup.cfg
pyduino/pyduino/: __init__.py  pyduino.py
pyduino/pyduino/pyduino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: command.ipynb  mesures_ponctuelles.ipynb  mesures_ponctuelles.py  mesures_temporelles.ipynb  mesures_temporelles.py
tests_juduino/: Untitled.ipynb  charge_rc.csv  decharge_rc.csv  juduino.ipynb  juduino_dev.ipynb  mesures.csv  mesures_75pts.csv  mesures_P_jup.csv  mesures_us.csv  mesures_us_jup.csv  pressions_mesures.ipynb  temperatures.csv  temperatures_400s.csv  test_circuit_rc.ipynb  test_command.ipynb  test_mesures_ponctuelles.ipynb  test_temperature_tempo.ipynb  test_ultrasons_tempo.ipynb  ultrasons_mesures.ipynb
tests_pduino/: affiche_condo.csv  commande_leds.py  mariotte_mesure.py  mesure_temperature.py  mesures_pendule.py  mesures_rc.py  mesures_rc_dec.py  ultrasons_mesure.py  ultrasons_mesure_tempo.py
tests_pyduino/: mariotte_mesure.py  mesure_temperature.py  mesures_P.csv  mesures_rc.py  mesures_rc_dec.py  ultrasons_mesure.py  ultrasons_mesure_tempo.py
(+84 files in other folders)
