[metadata]
name = pyduino
version = 1.0.0
author = Philippe Campion
description = Communication série avec une carte Arduino
long_description = file : README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
classifiers = 
    Topic :: Software Development :: Libraries :: pyserial
    Intended Audience :: Education
    Natural Language :: French
    Operating System :: OS Independent

[options]
package_dir = 
    = pyduino
python_requires =  >=3.7
install_requires =
    pyserial
    matplotlib


