[metadata]
name = pyduino
version = 0.0.1
author = Philippe Campion
description = Communication serie avec une carte Arduino
long_description = file : description.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Education
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Education
    Natural Language :: French
    Operating System :: OS Independent

[options]
package_dir = 
    = pyduino
python_requires =  >=3.7
install_requires =
    pyserial
    matplotlib


